Changed all the measures in relative

--- a/index.html
+++ b/index.html
@@ -1,69 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | QR code component</title>
 
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
-
-    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap');
-
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-    
-    body{
-      background-color: hsl(212, 45%, 89%);
-    }
-
-    div.main {
-      display: flex;
-      flex-direction: column;
-      margin: auto;
-      margin-top: 5rem;
-      width: 375px;
-      padding: 1rem;
-      border-radius: 20px;
-
-      background-color: hsl(0, 0%, 100%);
-      font-family: 'Outfit', sans-serif;
-
-      padding-bottom: 2rem;
-    }
-
-    img {
-      border-radius: 15px;
-    }
-
-    .writings {
-      padding: 0 2vw;
-
-      text-align: center;
-    }
-
-    h1 {
-      font-weight: 700;
-      font-size: 28px;
-      color: hsl(218, 44%, 22%);
-    }
-
-    p {
-      font-weight: 400;
-      font-size: 20px;
-      color: hsl(220, 15%, 55%);
-    }
-
-  </style>
 </head>
+
 <body>
 
-  <div class="main">
+  <main>
     <img src="images/image-qr-code.png" alt="QR Code image">
 
     <div class="writings">
@@ -71,8 +22,7 @@
 
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-    
-  </div>
+  </main>
   
   
   <div class="attribution">
